--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,32 @@
+*{
+	margin:0px;
+	padding:0px;
+}
+.box{
+	display:flex;
+	align-items:centre;
+	justify-content:space-between;
+	width:100%
+	height:100px;
+	
+}
+.box-inside{
+	height:100px;
+	width:100px;
+	font-size:35px;
+}
+#box1{
+	background-color:red;
+	order:2;
+}
+#box2{
+	background-color:blue;
+	order:3;
+}
+#box3{
+	background-color:green;
+	order:1;
+}
+
 
 /* Your CSS Code here. */
