--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,11 @@
 	margin:0px;
 	padding:0px;
 }
-.box{
+.holder{
 	display:flex;
 	align-items:centre;
 	justify-content:space-between;
+	flex-wrap:wrap;
 	width:100%
 	height:100px;
 	
