--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,11 @@
 	background-color:green;
 	order:1;
 }
-
+.holder div{
+	display:flex;
+	flex-wrap:wrap;
+	/* justify-content:space-between; */
+	gap:10px;
+}
 
 /* Your CSS Code here. */
