--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,10 @@
 }
 .holder{
 	display:flex;
-	align-items:centre;
+	align-items:center;
 	justify-content:space-between;
 	flex-wrap:wrap;
-	width:100%
+	width:100%;
 	height:100px;
 	
 }
@@ -31,7 +31,6 @@
 .holder div{
 	display:flex;
 	flex-wrap:wrap;
-	/* justify-content:space-between; */
 	gap:10px;
 }
 
