--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 	height:100px;
 	
 }
-.box-inside{
+.item{
 	height:100px;
 	width:100px;
 	font-size:35px;
@@ -27,11 +27,6 @@
 #box3{
 	background-color:green;
 	order:1;
-}
-.holder div{
-	display:flex;
-	flex-wrap:wrap;
-	gap:10px;
 }
 
 /* Your CSS Code here. */
